docs: 아키텍쳐/FAQ 문서 추가 및 코드 정리
- 서버 아키텍쳐 구조 설명 문서 작성
- FAQ 문서 추가 (마이바티스 설정, 검색 프로세스, 매장 테이블 구조, 테스트 전략, 모니터링)
- MockUserInfoController 미사용 하드코딩 폴백 메서드 제거
- MenuMapper.xml LENGTH 타입 캐스팅 수정

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>